# zindi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
tests/: dev-test.ipynb  test_user.py  test_utils.py
tests/user/: test_user_auth.py  test_user_challenge_interaction.py  test_user_challenge_selection.py  test_user_team_management.py
tests/utilities/: test_utils_api_helpers.py  test_utils_data_parsing.py  test_utils_file_operations.py  test_utils_printing.py
zindi/: __init__.py  models.py  platform_api.py  user.py  utils.py
zindi/docs/: template.py
