[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zindi"
dynamic = ["version"]
description = "A user-friendly ZINDI package which allow Zindians to achieve all available tasks on ZINDI Platform using this package."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "The CIA TEAM & Alex Kameni", email = "ai.team.future.coders.1@gmail.com" }
]
keywords = [
    "zindi",
    "data science",
    "competition",
    "machine learning",
    "api client",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", # Updated from setup.py version hint
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tdqm",
    "requests",
    "pandas",
    "requests-toolbelt",
]

[project.urls]
Homepage = "https://github.com/eaedk/testing-zindi-package" # Assuming this is the repo
Repository = "https://github.com/eaedk/testing-zindi-package.git" # Assuming this is the repo

[project.optional-dependencies]
dev = [
    "tox",
    "pytest",
    "pytest-cov",
    "sphinx",
    "wheel",
    "twine",
    "build",
    "jupyter",
    "ipywidgets",
    "pickleshare",
    "black",
    "flake8",
    "autoflake",
    "isort",
    "safety",
    "mypy",
    "bump2version",
]

[tool.hatch.version]
source = "vcs"
# Optional: configure tag pattern if not standard
# path = "zindi/__init__.py" # If version is stored in __init__.py

[tool.hatch.build.targets.wheel]
packages = ["zindi"]